--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,25 @@
 env:
     global:
-        - PYPI_UPLOAD=true  # true or false
-        - TESTPYPI_UPLOAD=true
         - REPO_DIR=linearmodels
         # Commit from your-project that you want to build
-        - BUILD_COMMIT=master
-        # pip dependencies to _build_ your project
-        - BUILD_DEPENDS="Cython numpy pandas scipy statsmodels patsy property_cached mypy_extensions xarray"
+        - BUILD_COMMIT=4.15
+        # Upload to PyPI directly
+        - PYPI_UPLOAD=true  # true or false
+        - TESTPYPI_UPLOAD=true
+      # pip dependencies to _build_ your project
+        - BUILD_DEPENDS="cython numpy xarray"
         # pip dependencies to _test_ your project.  Include any dependencies
         # that you need, that are also specified in BUILD_DEPENDS, this will be
         # a separate install.
-        - TEST_DEPENDS="pytest>=5 jupyter jupyter_client nbformat nbconvert"
-        - PLAT=x86_64
+        - TEST_DEPENDS="numpy pandas scipy statsmodels patsy property_cached>=1.6.3 mypy_extensions>=0.4 pytest jupyter jupyter_client nbformat nbconvert pytest-xdist<1.30"
         - UNICODE_WIDTH=32
+        - WHEELHOUSE_UPLOADER_USERNAME=travis-worker
+        - MB_ML_VER=2010
+        # Following generated with
+        # travis encrypt -r your-org/your-project-wheels WHEELHOUSE_UPLOADER_SECRET=<the api key>
+        # This is for Rackspace uploads.  Contact Matthew Brett, or the
+        # scikit-learn team, for # permission (and the API key) to upload to
+        # the Rackspace account used here, or use your own account.
 
 # You will likely prefer "language: generic" for travis configuration,
 # rather than, say "language: python". Multibuild doesn't use
@@ -25,8 +32,12 @@ language: generic
 
 # For CPython macOS builds only, the minimum supported macOS version and
 # architectures of any C extensions in the wheel are set with the variable
-# MB_PYTHON_OSX_VER: 10.9 (64-bit only) or 10.6 (64/32-bit dual arch).
-
+# MB_PYTHON_OSX_VER: 10.9 (64-bit only) or 10.6 (64/32-bit dual arch). By
+# default this is set to the highest available for the Python version selected
+# using MB_PYTHON_VERSION. You should only need to set this explicitly if you
+# are building a 10.6 dual-arch build for a CPython version where both a 10.9 and
+# 10.6 build are available (for example, 2.7 or 3.7).
+# All PyPy macOS builds are 64-bit only.
 
 # Required in Linux to invoke `docker` ourselves
 services: docker
@@ -39,13 +50,6 @@ matrix:
   include:
     - os: linux
       env:
-        - MB_PYTHON_VERSION=3.5
-    - os: linux
-      env:
-        - MB_PYTHON_VERSION=3.5
-        - PLAT=i686
-    - os: linux
-      env:
         - MB_PYTHON_VERSION=3.6
     - os: linux
       env:
@@ -58,16 +62,22 @@ matrix:
       env:
         - MB_PYTHON_VERSION=3.7
         - PLAT=i686
-    - os: osx
+    - os: linux
       env:
-        - MB_PYTHON_VERSION=3.5
+        - MB_PYTHON_VERSION=3.8
+    - os: linux
+      env:
+        - MB_PYTHON_VERSION=3.8
+        - PLAT=i686
     - os: osx
       env:
         - MB_PYTHON_VERSION=3.6
     - os: osx
       env:
         - MB_PYTHON_VERSION=3.7
-        - MB_PYTHON_OSX_VER=10.9
+    - os: osx
+      env:
+        - MB_PYTHON_VERSION=3.8
 
 before_install:
     - source multibuild/common_utils.sh
