--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
         # pip dependencies to _test_ your project.  Include any dependencies
         # that you need, that are also specified in BUILD_DEPENDS, this will be
         # a separate install.
-        - TEST_DEPENDS="numpy pandas scipy statsmodels patsy property_cached>=1.6.3 mypy_extensions>=0.4 pytest jupyter jupyter_client nbformat nbconvert pytest-xdist<1.30"
+        - TEST_DEPENDS="numpy pandas scipy statsmodels patsy property_cached mypy_extensions pytest jupyter jupyter_client nbformat nbconvert pytest-xdist"
         - UNICODE_WIDTH=32
         - WHEELHOUSE_UPLOADER_USERNAME=travis-worker
         - MB_ML_VER=2010
