--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,10 @@ environment:
     # Installed in a second wave
     EXTRA_BUILD_DEPENDS: "statsmodels"
     TEST_DEPENDS: "cython numpy scipy statsmodels pandas xarray property_cached mypy-extensions pytest pytest-xdist"
+    OMP_NUM_THREADS: 1
+    MKL_NUM_THREADS: 1
+    VML_NUM_THREADS: 1
+    PYTHONHASHSEED: 31211999
   TESTPYPI_USERNAME:
     secure: 9D67F9Bcy8PITwg1cezOgw==
   TESTPYPI_PASSWORD:
@@ -98,7 +102,7 @@ test_script:
     # run tests from install wheel
     - mkdir _for_testing
     - cd _for_testing
-    # - python -c "import linearmodels; linearmodels.test(['-n','auto','--skip-slow'])"
+    - python -c "import linearmodels; linearmodels.test(['-n 2','--skip-slow','--tb=long','-r A'])"
 
 on_success:
     - echo "Upload here"
