--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,10 +29,6 @@ environment:
     secure: ufGrse+xSx3blI6bh9bnSg==
 
   matrix:
-    - PYTHON: C:\Python38
-      PYTHON_VERSION: 3.8
-      PYTHON_ARCH: 32
-
     - PYTHON: C:\Python38-x64
       PYTHON_VERSION: 3.8
       PYTHON_ARCH: 64
@@ -44,6 +40,10 @@ environment:
     - PYTHON: C:\Python36-x64
       PYTHON_VERSION: 3.6
       PYTHON_ARCH: 64
+
+    - PYTHON: C:\Python38
+      PYTHON_VERSION: 3.8
+      PYTHON_ARCH: 32
 
     - PYTHON: C:\Python37
       PYTHON_VERSION: 3.7
@@ -102,7 +102,7 @@ test_script:
     # run tests from install wheel
     - mkdir _for_testing
     - cd _for_testing
-    - python -c "import linearmodels; linearmodels.test(['-n 2','--skip-slow','--tb=long','-r A'])"
+    - python -c "import linearmodels; linearmodels.test(['-n 2','--skip-slow','--tb=long','--durations=25','--full-trace'])"
 
 on_success:
     - echo "Upload here"
