--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -117,7 +117,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install virtualenv
-    - name: Install Prerequisites
+    - name: Build, Install and Test
       run: |
         source multibuild/common_utils.sh
         source multibuild/travis_steps.sh
@@ -125,12 +125,8 @@ jobs:
         before_install
         echo "------ CLEAN CODE --------"
         clean_code $REPO_DIR $BUILD_COMMIT
-    - name: Build Wheels
-      run: |
         echo "------ BUILD WHEEL --------"
         build_wheel $REPO_DIR ${{ matrix.PLAT }}
-    - name: Install and Test Wheels
-      run: |
         echo "------ INSTALL RUN --------"
         install_run ${{ matrix.PLAT }}
     - name: Upload wheels
