--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -36,10 +36,6 @@ jobs:
       TRAVIS_BRANCH: ${{ github.head_ref }}
       TRAVIS_PULL_REQUEST: ${{ github.event.number }}
       TRAVIS_BUILD_DIR: ${{ github.workspace }}
-      TESTPYPI_USERNAME: ${{ secrets.TESTPYPI_USERNAME }}
-      TESTPYPI_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
-      PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
-      PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       MKL_NUM_THREADS: 1
       OMP_NUM_THREADS: 1
       OPENLAS_NUM_THREADS: 1
@@ -132,3 +128,9 @@ jobs:
     - name: Upload wheels
       if: always()
       run: source twine-upload.sh
+      env:
+        TESTPYPI_USERNAME: ${{ secrets.TESTPYPI_USERNAME }}
+        TESTPYPI_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
+        PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+
