--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,19 +6,20 @@ matrix:
 
 environment:
   global:
-    BUILD_COMMIT: "v4.21"
-    PYPI_UPLOAD: "true"
-    TESTPYPI_UPLOAD: "true" # "true" or "false"
+    BUILD_COMMIT: "main"
+    PYPI_UPLOAD: "false"
+    TESTPYPI_UPLOAD: "false" # "true" or "false"
     REPO_DIR: linearmodels
     PACKAGE_NAME: linearmodels
-    BUILD_DEPENDS: "cython numpy scipy pandas xarray property_cached mypy-extensions setuptools pyhdfe"
+    BUILD_DEPENDS: "cython scipy pandas xarray property_cached mypy-extensions setuptools pyhdfe"
     # Installed in a second wave
     EXTRA_BUILD_DEPENDS: "statsmodels"
-    TEST_DEPENDS: "cython numpy scipy statsmodels pandas xarray property_cached mypy-extensions pytest pytest-xdist pyhdfe"
+    TEST_DEPENDS: "cython scipy statsmodels pandas xarray property_cached mypy-extensions pytest pytest-xdist pyhdfe"
     OMP_NUM_THREADS: 1
     MKL_NUM_THREADS: 1
     VML_NUM_THREADS: 1
     PYTHONHASHSEED: 31211999
+    NP_TEST_DEP: 1.19.5
   TESTPYPI_USERNAME:
     secure: 9D67F9Bcy8PITwg1cezOgw==
   TESTPYPI_PASSWORD:
@@ -32,26 +33,32 @@ environment:
     - PYTHON: C:\Python39-x64
       PYTHON_VERSION: 3.9
       PYTHON_ARCH: 64
+      NP_BUILD_DEP: 1.19.5
 
     - PYTHON: C:\Python38-x64
       PYTHON_VERSION: 3.8
       PYTHON_ARCH: 64
+      NP_BUILD_DEP: 1.17.5
 
     - PYTHON: C:\Python37-x64
       PYTHON_VERSION: 3.7
       PYTHON_ARCH: 64
+      NP_BUILD_DEP: 1.15.4
 
     - PYTHON: C:\Python39
       PYTHON_VERSION: 3.9
       PYTHON_ARCH: 32
+      NP_BUILD_DEP: 1.19.5
 
     - PYTHON: C:\Python38
       PYTHON_VERSION: 3.8
       PYTHON_ARCH: 32
+      NP_BUILD_DEP: 1.17.5
 
     - PYTHON: C:\Python37
       PYTHON_VERSION: 3.7
       PYTHON_ARCH: 32
+      NP_BUILD_DEP: 1.15.4
 
 
 # We always use a 64-bit machine, but can build x86 distributions
@@ -82,7 +89,9 @@ install:
 
 build_script:
     # Install build requirements
-    - pip install %BUILD_DEPENDS%
+    - echo pip install numpy==%NP_BUILD_DEP% %BUILD_DEPENDS%
+    - pip install numpy==%NP_BUILD_DEP% %BUILD_DEPENDS%
+    - echo pip install %EXTRA_BUILD_DEPENDS%
     - pip install %EXTRA_BUILD_DEPENDS%
 
     # build wheel:
@@ -93,8 +102,11 @@ build_script:
 
 test_script:
     # create test env
-    - python -m pip install --upgrade pip
-    - pip install %TEST_DEPENDS%
+    - python -m pip install --upgrade pip virtualenv
+    - virtualenv test
+    - .\test\Scripts\activate.bat
+    - echo pip install numpy==%NP_TEST_DEP% %TEST_DEPENDS%
+    - pip install numpy==%NP_TEST_DEP% %TEST_DEPENDS%
 
     # install from wheel
     - pip install --no-index --find-links dist/ %PACKAGE_NAME%
@@ -102,6 +114,7 @@ test_script:
     # run tests from install wheel
     - mkdir _for_testing
     - cd _for_testing
+    - pip list
     - python -c "import linearmodels; linearmodels.test(['-n 2','--skip-slow','--skip-smoke'])"
 
 on_success:
