--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -7,7 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build_wheels:
+    name: ${{ matrix.os }}, Python ${{ matrix.python }}
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -15,134 +16,51 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8, 3.9, "3.10"]
-        os: [ubuntu-latest, macos-latest]
-        platform: [x64]
-        PLAT: [i686, x86_64]
-        exclude:
-          - os: macos-latest # macos-10.15
-            PLAT: i686
-          - python-version: "3.10" # No SciPy for i686 and 3.10
-            PLAT: i686
+        python: ["cp37", "cp38", "cp39", "cp310"]
+        os: [ubuntu-20.04, windows-2019, macOS-10.15]
     env:
-      REPO_DIR: linearmodels
-      PKG_NAME: linearmodels
-      BUILD_COMMIT: "v4.25"
-      PYPI_UPLOAD: true # true or false
+      BUILD_COMMIT: "v5.1.0"  # main or a specific version, e.g., v5.1.0
+      PYPI_UPLOAD: true  # true or false
       TESTPYPI_UPLOAD: false
-      UNICODE_WIDTH: 32
-      MB_PYTHON_VERSION: ${{ matrix.python-version }}
-      TRAVIS_PYTHON_VERSION: ${{ matrix.python-version }}
-      MB_ML_VER: ${{ matrix.MB_ML_VER }}
-      TRAVIS_REPO_SLUG: ${{ github.repository }}
-      TRAVIS_BRANCH: ${{ github.head_ref }}
-      TRAVIS_PULL_REQUEST: ${{ github.event.number }}
-      TRAVIS_BUILD_DIR: ${{ github.workspace }}
+      CIBW_BUILD: ${{ matrix.python }}-*
+      CIBW_ARCHS_LINUX: "x86_64"
+      CIBW_ARCHS_MACOS: "x86_64 arm64"
+      # No support for pypy, musl, Win32 for 3.10+
+      CIBW_SKIP: "pp* *-musllinux_x86_64 cp310-win32"
+      CIBW_TEST_REQUIRES: pytest pytest-xdist
+      CIBW_TEST_COMMAND: python -c "import linearmodels; linearmodels.test(['-n','2','--skip-slow'])"
+      CIBW_REPAIR_WHEEL_COMMAND_LINUX: 'auditwheel repair --strip -w {dest_dir} {wheel}'
       MKL_NUM_THREADS: 1
       OMP_NUM_THREADS: 1
       OPENLAS_NUM_THREADS: 1
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: recursive
-        fetch-depth: 0
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Pin Numpy, Scipy and Pandas version
-      run: |
-        echo "NP_TEST_DEP=$(echo numpy==1.21.4)" >> $GITHUB_ENV;
-        echo "SP_BUILD_DEP=$(echo scipy==1.7.2)" >> $GITHUB_ENV;
-        echo "SP_TEST_DEP=$(echo scipy==1.7.2)" >> $GITHUB_ENV;
-        echo "PANDAS_DEP=$(echo pandas==1.3.4)" >> $GITHUB_ENV;
-        if [[ $TRAVIS_PYTHON_VERSION == "3.7" ]]; then
-          echo "NP_BUILD_DEP=$(echo numpy==1.15.4)" >> $GITHUB_ENV;
-          echo "NP_TEST_DEP=$(echo numpy==1.19.4)" >> $GITHUB_ENV;
-          echo "SP_BUILD_DEP=$(echo scipy==1.5.4)" >> $GITHUB_ENV;
-          echo "SP_TEST_DEP=$(echo scipy==1.5.4)" >> $GITHUB_ENV;
-          echo "PANDAS_DEP=$(echo pandas==1.1.5)" >> $GITHUB_ENV;
-        fi
-        if [[ $TRAVIS_PYTHON_VERSION == "3.8" ]]; then
-          echo "NP_BUILD_DEP=$(echo numpy==1.17.5)" >> $GITHUB_ENV;
-        fi
-        if [[ $TRAVIS_PYTHON_VERSION == "3.9" ]]; then
-          echo "NP_BUILD_DEP=$(echo numpy==1.19.4)" >> $GITHUB_ENV;
-        fi
-        if [[ $TRAVIS_PYTHON_VERSION == "3.10" ]]; then
-          echo "NP_BUILD_DEP=$(echo numpy==1.21.4)" >> $GITHUB_ENV;
-        fi
-    - name: Setup Environment variables
-      run: |
-        echo "Event type: ${{ github.event_name }}"
-        if [[ ${TESTPYPI_UPLOAD} == "true" ]]; then
-          echo "Upload to Test PyPI"
-          echo "UPLOAD_USERNAME=$TESTPYPI_USERNAME" >> $GITHUB_ENV
-          echo "UPLOAD_PASSWORD=$TESTPYPI_PASSWORD" >> $GITHUB_ENV
-          echo "PYPI_UPLOAD=false" >> $GITHUB_ENV
-          echo "TESTPYPI_UPLOAD=true" >> $GITHUB_ENV
-        fi
-        if [[ ${PYPI_UPLOAD} == "true" ]]; then
-          echo "Upload to PyPI"
-          echo "UPLOAD_USERNAME=$PYPI_USERNAME" >> $GITHUB_ENV
-          echo "UPLOAD_PASSWORD=$PYPI_PASSWORD" >> $GITHUB_ENV
-          echo "PYPI_UPLOAD=true" >> $GITHUB_ENV
-          echo "TESTPYPI_UPLOAD=false" >> $GITHUB_ENV
-        fi
-        echo "BUILD_COMMIT=$BUILD_COMMIT" >> $GITHUB_ENV
-        if [ "macos-latest" == "${{ matrix.os }}" ]; then
-          echo "TRAVIS_OS_NAME=osx" >> $GITHUB_ENV
-        else
-          echo "TRAVIS_OS_NAME=${{ matrix.os }}" >> $GITHUB_ENV;
-        fi
-        echo "BUILD_DEPENDS=$(echo $NP_BUILD_DEP $SP_BUILD_DEP $PANDAS_DEP cython statsmodels xarray pyhdfe)" >> $GITHUB_ENV;
-        echo "TEST_DEPENDS=$(echo $NP_TEST_DEP $SP_TEST_DEP $PANDAS_DEP nose pytest pytest-xdist statsmodels patsy property_cached mypy_extensions pytest jupyter jupyter_client nbformat nbconvert==5.6.1 pytest-xdist pyhdfe)" >> $GITHUB_ENV;
-        echo "DOCKER_TEST_IMAGE=$(echo multibuild/xenial_${{ matrix.PLAT}})" >> $GITHUB_ENV;
-        # focal for 3.10 only
-        if [[ ${{ matrix.python-version }} == "3.10" ]]; then
-          echo "DOCKER_TEST_IMAGE=$(echo multibuild/focal_${{ matrix.PLAT}})" >> $GITHUB_ENV;
-        fi
-    - name: Print some Environment variable
-      run: |
-        echo "ANACONDA_ORG: ${ANACONDA_ORG}"
-        echo "TRAVIS_BRANCH: ${TRAVIS_BRANCH}"
-        echo "TRAVIS_PULL_REQUEST: ${TRAVIS_PULL_REQUEST}"
-        echo "TRAVIS_REPO_SLUG: ${TRAVIS_REPO_SLUG}"
-        echo "TRAVIS_EVENT_TYPE: ${TRAVIS_EVENT_TYPE}"
-        echo "TRAVIS_OS_NAME: ${TRAVIS_OS_NAME}"
-        echo "NP_BUILD_DEP: ${NP_BUILD_DEP}"
-        echo "NP_TEST_DEP: ${NP_TEST_DEP}"
-        echo "SP_BUILD_DEP: ${SP_BUILD_DEP}"
-        echo "SP_TEST_DEP: ${SP_TEST_DEP}"
-        echo "PANDAS_DEP: ${PANDAS_DEP}"
-        echo "PLAT: ${{ matrix.PLAT }}"
-        echo "DOCKER_TEST_IMAGE: ${DOCKER_TEST_IMAGE}"
-        echo "BUILD_DEPENDS: ${BUILD_DEPENDS}"
-        echo "TEST_DEPENDS: ${TEST_DEPENDS}"
-        echo "PYPI_UPLOAD: ${PYPI_UPLOAD}"
-        echo "TESTPYPI_UPLOAD: ${TESTPYPI_UPLOAD}"
-    - name: Install VirtualEnv
-      run: |
-        python -m pip install --upgrade pip
-        pip install virtualenv
-    - name: Build, Install and Test
-      run: |
-        source multibuild/common_utils.sh
-        source multibuild/travis_steps.sh
-        echo "------ BEFORE INSTALL ---------"
-        before_install
-        echo "------ CLEAN CODE --------"
-        clean_code $REPO_DIR $BUILD_COMMIT
-        echo "------ BUILD WHEEL --------"
-        build_wheel $REPO_DIR ${{ matrix.PLAT }}
-        echo "------ INSTALL RUN --------"
-        install_run ${{ matrix.PLAT }}
-    - name: Upload wheels
-      if: always()
-      run: source twine-upload.sh
-      env:
-        TESTPYPI_USERNAME: ${{ secrets.TESTPYPI_USERNAME }}
-        TESTPYPI_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
-        PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      - uses: actions/checkout@v2
+        with:
+          submodules: recursive
+          fetch-depth: 0
+
+      # Used to host cibuildwheel
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.3.1
+
+      - name: Build wheels
+        run: |
+          echo "CIBW_BUILD: ${CIBW_BUILD}"
+          echo "CIBW_BEFORE_BUILD: ${CIBW_BEFORE_BUILD}"
+          python -m cibuildwheel --output-dir wheelhouse linearmodels
+        env:
+          CIBW_BEFORE_BUILD: 'git submodule foreach git checkout  ${{ env.BUILD_COMMIT }}'
+
+      - name: Upload wheels
+        if: always()
+        run: source twine-upload.sh
+        env:
+          TESTPYPI_USERNAME: ${{ secrets.TESTPYPI_USERNAME }}
+          TESTPYPI_PASSWORD: ${{ secrets.TESTPYPI_PASSWORD }}
+          PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
