--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -16,11 +16,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["cp38", "cp39", "cp310"]
+        python: ["cp38", "cp39", "cp310", "cp311"]
         os: [ubuntu-20.04, windows-2019, macOS-10.15]
     env:
-      BUILD_COMMIT: "v4.27"  # main or a specific version, e.g., v4.25
-      PYPI_UPLOAD: true  # true or false
+      BUILD_COMMIT: "main"  # main or a specific version, e.g., v4.25
+      PYPI_UPLOAD: false  # true or false
       TESTPYPI_UPLOAD: false
       CIBW_BUILD: ${{ matrix.python }}-*
       CIBW_ARCHS_LINUX: "x86_64 aarch64"
