--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -19,8 +19,8 @@ jobs:
         python: ["cp38", "cp39", "cp310", "cp311"]
         os: [ubuntu-20.04, windows-2019, macOS-10.15]
     env:
-      BUILD_COMMIT: "main"  # main or a specific version, e.g., v4.25
-      PYPI_UPLOAD: false  # true or false
+      BUILD_COMMIT: "v4.28"  # main or a specific version, e.g., v4.25
+      PYPI_UPLOAD: true  # true or false
       TESTPYPI_UPLOAD: false
       CIBW_BUILD: ${{ matrix.python }}-*
       CIBW_ARCHS_LINUX: "x86_64 aarch64"
