--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -16,10 +16,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["cp38", "cp39", "cp310", "cp311"]
+        python: ["cp39", "cp310", "cp311"]
         os: [ubuntu-20.04, windows-2019, macOS-10.15]
     env:
-      BUILD_COMMIT: "v4.31"  # main or a specific version, e.g., v4.25
+      BUILD_COMMIT: "v5.0"  # main or a specific version, e.g., v4.25
       PYPI_UPLOAD: true  # true or false
       TESTPYPI_UPLOAD: false
       CIBW_BUILD: ${{ matrix.python }}-*
