--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python: ["cp39", "cp310", "cp311"]
-        os: [ubuntu-20.04, windows-2019, macOS-10.15]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     env:
       BUILD_COMMIT: "v5.1"  # main or a specific version, e.g., v4.25
       PYPI_UPLOAD: true  # true or false
