--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -16,10 +16,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["cp39", "cp310", "cp311"]
+        python: [cp39, cp310, cp311, cp312]
         os: [ubuntu-latest, windows-latest, macOS-latest]
     env:
-      BUILD_COMMIT: "v5.2"  # main or a specific version, e.g., v4.25
+      BUILD_COMMIT: "v5.3"  # main or a specific version, e.g., v4.25
       PYPI_UPLOAD: true  # true or false
       TESTPYPI_UPLOAD: false
       CIBW_BUILD: ${{ matrix.python }}-*
@@ -54,7 +54,7 @@ jobs:
           platforms: all
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.12.1
+        run: python -m pip install cibuildwheel~=2.16
 
       - name: Build wheels
         run: |
