--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -17,16 +17,16 @@ jobs:
       fail-fast: false
       matrix:
         python: [cp39, cp310, cp311, cp312]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     env:
-      BUILD_COMMIT: "v5.3"  # main or a specific version, e.g., v4.25
+      BUILD_COMMIT: "v5.4"  # main or a specific version, e.g., v4.25
       PYPI_UPLOAD: true  # true or false
       TESTPYPI_UPLOAD: false
       CIBW_BUILD: ${{ matrix.python }}-*
       CIBW_ARCHS_LINUX: "x86_64 aarch64"
       CIBW_ARCHS_MACOS: "x86_64 arm64"
       # No support for pypy, musl, Win32 for 3.10+
-      CIBW_SKIP: "pp* cp310-win32 cp311-win32, cp312-win"
+      CIBW_SKIP: "pp* *musllinux_aarch64* cp310-win32 cp311-win32 cp312-win32"
       CIBW_TEST_REQUIRES: pytest pytest-xdist
       CIBW_TEST_COMMAND: python -c "import linearmodels; linearmodels.test(['-n','2','--skip-slow'])"
       # Avoid testing on emulated architectures
