--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -26,7 +26,7 @@ jobs:
       CIBW_ARCHS_LINUX: "x86_64 aarch64"
       CIBW_ARCHS_MACOS: "x86_64 arm64"
       # No support for pypy, musl, Win32 for 3.10+
-      CIBW_SKIP: "pp* *musllinux_aarch64* cp310-win32 cp311-win32 cp312-win32"
+      CIBW_SKIP: "pp* *musllinux_aarch64* cp310-win32 cp311-win32 cp312-win32 cp39-musllinux*"
       CIBW_TEST_REQUIRES: pytest pytest-xdist
       CIBW_TEST_COMMAND: python -c "import linearmodels; linearmodels.test(['-n','2','--skip-slow'])"
       # Avoid testing on emulated architectures
