--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -27,7 +27,7 @@ jobs:
       CIBW_ARCHS_MACOS: "x86_64 arm64"
       # No support for pypy, musl, Win32 for 3.10+
       CIBW_SKIP: "pp* *musllinux_aarch64* *-win32 cp39-musllinux*"
-      CIBW_TEST_REQUIRES: pytest pytest-xdist
+      CIBW_TEST_REQUIRES: pytest==7.4.4 pytest-xdist
       CIBW_TEST_COMMAND: python -c "import linearmodels; linearmodels.test(['-n','2','--skip-slow'])"
       # Avoid testing on emulated architectures
       CIBW_TEST_SKIP: "*-*linux_{aarch64,ppc64le,s390x} *-win32"
