--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [cp39, cp310, cp311, cp312]
+        python: [cp39, cp310, cp311, cp312, cp313]
         os: [ubuntu-latest, windows-latest, macos-latest]
     env:
       BUILD_COMMIT: "v6.0"  # main or a specific version, e.g., v4.25
@@ -42,29 +42,23 @@ jobs:
           submodules: recursive
           fetch-depth: 0
 
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.x'
-
       - name: Set up QEMU
         if: runner.os == 'Linux'
         uses: docker/setup-qemu-action@v3
         with:
           platforms: all
 
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel~=2.16
+      - name: Build wheels (Default)
+        uses: pypa/cibuildwheel@v2.21
+        with:
+          output-dir: wheelhouse
+          package-dir: linearmodels
+        env:
+          CIBW_BEFORE_BUILD: 'git submodule foreach git checkout  ${{ env.BUILD_COMMIT }}'
 
-      - name: Build wheels
-        run: |
-          pushd linearmodels
-          git remote -v
-          git checkout main
-          git pull origin main
-          popd
-          git submodule foreach git checkout ${{ env.BUILD_COMMIT }}
-          python -m cibuildwheel --output-dir wheelhouse linearmodels
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
 
       - name: Upload wheels
         if: always()
