--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest, macos-15]
+        os: [ubuntu-latest, windows-latest, macos-latest, macos-15-intel]
         python: [cp310, cp311, cp312, cp313, cp314]
     env:
       BUILD_COMMIT: "main"  # main or a specific version, e.g., "v6.1"
