--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -19,8 +19,8 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest, macos-15-intel]
         python: [cp310, cp311, cp312, cp313, cp314]
     env:
-      BUILD_COMMIT: "main"  # main or a specific version, e.g., "v6.1"
-      PYPI_UPLOAD: false  # true or false
+      BUILD_COMMIT: "v7.0"  # main or a specific version, e.g., "v6.1"
+      PYPI_UPLOAD: true  # true or false
       TESTPYPI_UPLOAD: false
       CIBW_BUILD: ${{ matrix.python }}-*
       CIBW_ARCHS_LINUX: "x86_64 aarch64"
